// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapchot (container) 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
      Jhonnatan
    </h1>
    <h3>
      Machuca
    </h3>
    <p
      class="mi-clase-favorita"
    >
      Elden Ring, Smash, Metal Gear
    </p>
    <p>
      4
    </p>
    <h1>
      Activo
    </h1>
    <p
      style="background-color: red; border-radius: 10px; padding: 10px; margin-top: 30px;"
    >
      {"zipCode":"255555040","country":"Chile"}
    </p>
    <p>
      Valor actualizado dentro de la función
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snapchot (screen) 1`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
    Jhonnatan
  </h1>
  <h3>
    Machuca
  </h3>
  <p
    class="mi-clase-favorita"
  >
    Elden Ring, Smash, Metal Gear
  </p>
  <p>
    4
  </p>
  <h1>
    Activo
  </h1>
  <p
    style="background-color: red; border-radius: 10px; padding: 10px; margin-top: 30px;"
  >
    {"zipCode":"255555040","country":"Chile"}
  </p>
  <p>
    Valor actualizado dentro de la función
  </p>
</div>
`;
